--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,9 @@
 
         <div id="activ-logo">
 
+            <a href="/">
             <img src="images/Activ_logo.png" alt="Activ_logo">
+            </a>
 
         </div>
 
@@ -181,8 +183,11 @@
                 <p class="footer-titulo">PROMOCIONES</p>
                 <p class="footer-item">Sé el primero en enterarte de nuestras promociones</p>
                 <form id="inscribir-correo" action="">
-                    <input type="text" placeholder="Ingresa tu correo">
-                    <button type="submit"><i class="fas fa-share"></i></button>
+
+                    <div class="footer-correo">
+                        <input type="text" placeholder="Ingresa tu correo">
+                        <button type="submit"><i class="fas fa-share"></i></button>
+                    </div>
                 </form>
 
             </div>
