--- a/views/index.html
+++ b/views/index.html
@@ -149,9 +149,9 @@
 
             <div id="footer-info" class="footer-nav">
 
-                <p><a href=""><i class="fas fa-globe-americas"></i>  México</a></p>
-                <p><a href=""><i class="fas fa-credit-card"></i>  Métodos de pago</a></p>
-                <p><a href=""><i class="fas fa-paper-plane"></i>  Envíanos un comentario</a></p>
+                <p class="foot-info"><a href=""><i class="fas fa-globe-americas"></i>  México</a></p>
+                <p class="foot-info"><a href=""><i class="fas fa-credit-card"></i>  Métodos de pago</a></p>
+                <p class="foot-info"><a href=""><i class="fas fa-paper-plane"></i>  Envíanos un comentario</a></p>
                 
             </div>
 
