interactividad en index.html

--- a/views/index.html
+++ b/views/index.html
@@ -84,17 +84,27 @@
             <h2>Popular ahora</h2>
             
             <article class="categoria">
-                <img src="images/tenis.jpg" alt="tenis">
+
+                <div class="foto">
+                    <img src="images/tenis.jpg" alt="tenis">
+                    <div class="overlay"></div>
+                </div>
                 <p class="titulo-categoria">Tenis</p>
             </article>
 
             <article class="categoria">
-                <img src="images/ropa.jpg" alt="ropa">
+                <div class="foto">
+                    <img src="images/ropa.jpg" alt="ropa">
+                    <div class="overlay"></div>
+                </div>
                 <p class="titulo-categoria">Ropa</p>
             </article>
 
             <article class="categoria">
-                <img src="images/accesorios.jpg" alt="tenis">
+                <div class="foto">
+                    <img src="images/accesorios.jpg" alt="tenis">
+                    <div class="overlay"></div>
+                </div>
                 <p class="titulo-categoria">Accesorios</p>
             </article>
 
@@ -111,33 +121,57 @@
 
             <h2>Los favoritos</h2>
 
-            <article id="producto-favorito">
-                <img src="images\product-placeholder.jpg" alt="product">
+            <div class="arrow">
+                <i class="fas fa-chevron-left"></i>
+            </div>
+
+            <article class="producto-favorito">
+
+                <div class="foto-favorito">
+                    <img src="images\product-placeholder.jpg" alt="product">
+                </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
                 <p class="precio-producto">$199.80</p>
+            
             </article>
 
-            <article id="producto-favorito">
-                <img src="images\product-placeholder.jpg" alt="product">
+            <article class="producto-favorito">
+
+                <div class="foto-favorito">
+                    <img src="images\product-placeholder.jpg" alt="product">
+                </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
                 <p class="precio-producto">$199.80</p>
+
             </article>
 
-            <article id="producto-favorito">
-                <img src="images\product-placeholder.jpg" alt="product">
+            <article class="producto-favorito">
+
+                <div class="foto-favorito">
+                    <img src="images\product-placeholder.jpg" alt="product">
+                </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
                 <p class="precio-producto">$199.80</p>
+
             </article>
 
-            <article id="producto-favorito">
-                <img src="images\product-placeholder.jpg" alt="product">
+            <article class="producto-favorito">
+
+                <div class="foto-favorito">
+                    <img src="images\product-placeholder.jpg" alt="product">
+                </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
                 <p class="precio-producto">$199.80</p>
+
             </article>
+
+            <div class="arrow">
+                <i class="fas fa-chevron-right"></i>
+            </div>
             
         </section>
 
