--- a/public/css/indexStyle.css
+++ b/public/css/indexStyle.css
@@ -81,9 +81,27 @@ h2 {
 }
 
 .categoria img {
-    width: 85%;
-    height: 150px;
     object-fit: cover;
+    height: 150px;
+    width: 100%;
+}
+
+.categoria .foto {
+    width: 85%;
+    position: relative;
+    display: inline-block;
+}
+
+.foto:hover .overlay {
+        position: absolute;
+        top: 0;
+        width:100%;
+        height:98%;
+        left: 0;
+        background-color:#000;
+        opacity:0.4;
+        z-index: 1;
+        display: block;
 }
 
 .categoria p {
@@ -105,7 +123,7 @@ h2 {
 /* Los favoritos */
 
 #productos-favoritos {
-    padding: 0px 30px;
+    padding: 0px 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -115,28 +133,47 @@ h2 {
     width: 100%;
 }
 
-#producto-favorito {
+.arrow {
+    padding: 9% 0px;
+    text-align: center;
+    width: 5%;
+}
+
+.producto-favorito {
     margin-bottom: 30px;
     text-align: center;
     width: 20%;
 }
 
-#producto-favorito p {
+.foto-favorito{
+    margin: 1px 1px;
+    display: block;
+    overflow: hidden;
+    width: 100%;
+}
+
+#productos-favoritos img {
+    transition: transform 0.5s;
+    vertical-align: middle;
+    width: 100%;
+}
+
+.foto-favorito:hover > img {
+    transform: scale(1.1);
+    vertical-align: middle;
+}
+
+.producto-favorito p {
     margin: 0;
 }
 
-#producto-favorito .titulo-producto {
+.producto-favorito .titulo-producto {
   font-weight: 500;  
 }
 
-#producto-favorito .precio-producto {
+.producto-favorito .precio-producto {
     font-weight: 600;  
   }
-
-#productos-favoritos img {
-    width: 100%;
-    object-fit: cover;
-}
 
 @media (min-width: 560px) { 
 
@@ -172,9 +209,23 @@ h2 {
         width: 30%;
     }
 
-    .categoria img {
+    .categoria .foto {
         width: 100%;
         height: unset;
+    }
+
+    .categoria img {
+        height: unset;
+    }
+
+    /* Favoritos */
+
+    .arrow i {
+        font-size: 20px;
+    }
+
+    #productos-favoritos {
+        padding: 0px 40px;
     }
 
     #productos-favoritos h2 {
