--- a/views/index.html
+++ b/views/index.html
@@ -56,8 +56,8 @@
             </div>
 
             <ul>
-                <li><a href=""><i class="fas fa-user"></i></a></li>
-                <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="/login"><i class="fas fa-user"></i></a></li>
+                <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
 
         </div>
@@ -126,46 +126,54 @@
             </div>
 
             <article class="producto-favorito">
-
+                
+                <a href="/product">
                 <div class="foto-favorito">
                     <img src="images\product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
                 <p class="precio-producto">$199.80</p>
+                </a>
             
             </article>
 
             <article class="producto-favorito">
 
+                <a href="/product">
                 <div class="foto-favorito">
                     <img src="images\product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
                 <p class="precio-producto">$199.80</p>
+                </a>
 
             </article>
 
             <article class="producto-favorito">
 
+                <a href="/product">
                 <div class="foto-favorito">
                     <img src="images\product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
                 <p class="precio-producto">$199.80</p>
+                </a>
 
             </article>
 
             <article class="producto-favorito">
 
+                <a href="/product">
                 <div class="foto-favorito">
                     <img src="images\product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
                 <p class="precio-producto">$199.80</p>
+                </a>
 
             </article>
 
